--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -7,7 +7,7 @@
 app-fqdn-rules.tf @swaadofherbs
 
 # In a true org structure, these files should have the Network Operators account as the owner:
-main.tf @netops
-provider.tf @netops
-variables.tf @netops
-versions.tf @netops
+main.tf @sumitpotdar
+provider.tf @sumitpotdar
+variables.tf @sumitpotdar
+versions.tf @sumitpotdar
